# rgchart

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rgc-chart-node.tgz  rgc-chart-web.tgz
scripts/: fix-pkg.js
src/: errors.rs  lib.rs
src/models/: common.rs  mod.rs  timeline.rs
src/models/fluxis/: chart.rs  hitobjects.rs  metadata.rs  mod.rs  sound.rs  timing_points.rs
src/models/generic/: chart.rs  chartinfo.rs  hitobjects.rs  metadata.rs  mod.rs  sound.rs  timing_points.rs
src/models/osu/: chart.rs  difficulty.rs  editor.rs  events.rs  general.rs  hitobjects.rs  metadata.rs  mod.rs  sound.rs  timing_points.rs
src/models/quaver/: chart.rs  editor.rs  hitobjects.rs  mod.rs  sound.rs  timing_group.rs  timing_points.rs
src/parsers/: fluxis.rs  mod.rs  osu.rs  quaver.rs  stepmania.rs
src/utils/: mod.rs  quaver.rs  rhythm.rs  serde.rs  string.rs  time.rs
src/writers/: fluxis.rs  osu.rs  quaver.rs  stepmania.rs
tests/: to_fsc.rs  to_osu.rs  to_qua.rs  to_sm.rs
tests/Maps/fluXis/1463_IamAControversy/: 1749337797.ffx  1749337797.fsc  storyboard.fsb
tests/Maps/fluXis/1704_titleHyperflipLong/: 1773816949.fsc  1773818673.ffx  1775639713.fsb  1775997937.ffx  1775997937.fsc  altbeat.lua  beat.lua
tests/Maps/fluXis/225_BimboLimbo/: 1720743020.fsc  1720758016.ffx
tests/Maps/fluXis/935_hard-coremata/: 1733935061.ffx  Kobaryo feat. Various Artist - HARD-COREMATA (el_matero) [COREMATA].osu.fsc
tests/test_stuff/: mod.rs  util.rs
tests/wasm/: Maps  testing.js
tests/wasm/js/: to_fsc.js  to_osu.js  to_qua.js  to_sm.js
