[package]
name = "rgc-chart"
repository = "https://github.com/menvae/RGC-Chart"
authors = ["menvae"]
categories = ["parser-implementations", "encoding", "wasm"]
description = "A library for parsing and writing rhythm game charts."
keywords = [
  "wasm",
  "rhythm-game",
  "parser",
  "converter",
  "writer"
]
license = "MIT"
version = "0.0.9"
edition = "2021"
exclude = [
    "tests/*",
    ".vscode/*",
    "test-wasm.sh",
    "scripts/*",
    "package.json"
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false # TODO: re add doctest when we have better docs

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = false }
serde_yaml_ng = "0.9"
serde_json = "1.0.142"
wasm-bindgen = "0.2.100"
# web-sys = { version = "0.3", features = [
#  'console'
# ] }

[profile.release]
strip = false
debug = true
opt-level = 3
lto = true